bdr.BDR.scala.error
Compilation error:
BDR:2: error: type mismatch;
 found   : String
 required: Char
  var message:Char =readMessage();
                               ^BDR:3: error: value getIndication is not a member of Char
  message.getIndication();
          ^